2004-09-25  Ulrich Drepper  <drepper@redhat.com>

	* intl/dcigettext.c (DCIGETTEXT): Protect tfind/tsearch calls.
	* intl/dcigettext.c (_nl_find_msg): Call _nl_load_domain also if
	decided < 0.
	* intl/finddomain.c (_nl_find_domain): Likewise.
	* intl/l10nflist.c (_nl_make_l10nflist): Initialize lock.
	* intl/loadinfo.h (struct loaded_l10nfile): Add lock element.
	* intl/loadmsgcat.c (_nl_load_domain): Set decided to 1 only once we
	are done.  First set to -1 to signal initialization is ongoing.
	Protect against concurrent callers with recursive lock.
	* intl/finddomain.c (_nl_find_domain): Protect calls to
	_nl_make_l10nflist.
	* sysdeps/posix/getaddrinfo.c (getaddrinfo): If determinination of
	source address fails, initialized source_addr_len field so that
	duplicate address recognition does not copy junk.  [BZ #322]

2004-09-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/setuid.c (__setuid): Remove second
	result declaration.

2004-09-22  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/sysdep.h: Adjust whitespace.

2004-09-24  Ulrich Drepper  <drepper@redhat.com>

	* misc/daemon.c (daemon): Don't succeed if /dev/null cannot be
	opened.

	* nis/ypclnt.c (do_ypcall): Add one missing unlock.  Simplify the
	code a bit.

	* misc/daemon.c (daemon): Define errno in case /dev/null is not
	the correct device.

	* nis/ypclnt.c (yp_bind_file): Optimize a bit.  Minimal cleanups.

2004-09-23  Andreas Jaeger  <aj@suse.de>

	* locale/weight.h (findidx): Remove static, it's not supported
	anymore with GCC 4.0 in a block scope.
	* locale/weightwc.h (findidx): Likewise.
	* posix/regcomp.c (seek_collating_symbol_entry): Likewise.
	(lookup_collation_sequence_value): Likewise.
	(build_range_exp): Likewise.
	(build_collating_symbol): Likewise.
	* iconv/iconvconfig.c (write_output): Likewise.
	* elf/do-rel.h (elf_dynamic_do_rel): Likewise.

	* sysdeps/x86_64/dl-machine.h (elf_machine_rela_relative): Remove
	static, add always_inline attribute.