@@ -1,11 +1,18 @@
 2004-09-25  Ulrich Drepper  <drepper@redhat.com>
 
+	* locale/loadlocale.c (_nl_intern_locale_data): Recognize LC_CTYPE
+	data where _nl_value_type_LC_CTYPE does not contain the type
+	information.  Add range checks.
+	Reported by John Lumby <johnlumby@hotmail.com> [BZ #356].
+
+	* libio/vasprintf.c (_IO_vasprintf): Fix condition to decide
+	whether to realloc or not.
+	Reported by Pavel Kankovsky <peak@argo.troja.mff.cuni.cz> [BZ #346].
+
 	* intl/dcigettext.c (DCIGETTEXT): Protect tfind/tsearch calls.
 	* intl/dcigettext.c (_nl_find_msg): Call _nl_load_domain also if
 	decided < 0.
 	* intl/finddomain.c (_nl_find_domain): Likewise.
-	* intl/l10nflist.c (_nl_make_l10nflist): Initialize lock.
-	* intl/loadinfo.h (struct loaded_l10nfile): Add lock element.
 	* intl/loadmsgcat.c (_nl_load_domain): Set decided to 1 only once we
 	are done.  First set to -1 to signal initialization is ongoing.
 	Protect against concurrent callers with recursive lock.
